--- a/My-Course-Project-2021/My-Course-Project-2021.csproj
+++ b/My-Course-Project-2021/My-Course-Project-2021.csproj
@@ -43,12 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LinkedList.cs" />
+    <Compile Include="MyLinkedList.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queue.cs" />
-    <Compile Include="Stack.cs" />
+    <Compile Include="MyQueue.cs" />
+    <Compile Include="MyStack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
